# elpis

./: .gitignore  README.md  README_Znorm.md  soft1M_computation_count.txt  soft1M_computation_count_1.txt  soft1M_computation_count_10.txt  soft1M_computation_count_100.txt  soft1M_num_candidates.txt  soft1M_num_candidates_1.txt  soft1M_num_candidates_10.txt  soft1M_num_candidates_100.txt
Release/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Release/.cmake/api/v1/reply/: cache-v2-0ba844f54031fa32f0f3.json  (+14 more)
code/: CMakeLists.txt  main.cpp  release.sh  soft1M_computation_count_1.txt  soft1M_computation_count_10.txt  soft1M_computation_count_20.txt  soft1M_computation_count_5.txt  soft1M_num_candidates_1.txt  soft1M_num_candidates_10.txt  soft1M_num_candidates_20.txt  soft1M_num_candidates_5.txt
code/.cache/clangd/index/: BufferManager.cpp.330F1EE6810F3287.idx  BufferManager.cpp.CD561DC744CC1ABE.idx  BufferManager.h.1EF399938211BFB6.idx  Hercules.cpp.0FE1770C07BBD2F1.idx  Hercules.cpp.6CE4C91E0EDFA01B.idx  Hercules.h.9CF390625FC422BC.idx  Index.cpp.6831B0AAB6212E9C.idx  Index.cpp.A62D9B34ACA5C4A9.idx  Index.h.E77628A0C3C17890.idx  Node.cpp.2939A32A6DC94A30.idx  Node.cpp.4FEC47E23116C3C1.idx  Node.h.EBC572A951BF15BA.idx  QueryEngine.cpp.6E9A9CA1FB2BE88C.idx  QueryEngine.cpp.E470884B3046EC1A.idx  QueryEngine.h.721523D088740033.idx  Setting.cpp.7792A64CC56B5EFC.idx  Setting.cpp.BAA3F4C04DF32261.idx  Setting.h.401F750768EF9C04.idx  bruteforce.h.3097E0C875AC09D4.idx  calc_utils.cpp.8E70D0A343002F97.idx  calc_utils.cpp.A76C908DF753CC91.idx  calc_utils.h.65108B08ACE9B218.idx  file_utils.cpp.42594328729880C8.idx  file_utils.cpp.CB1119B9A1BD520C.idx  file_utils.h.BB2BBD5B98836936.idx  globals.h.3F61B533EBB7AAC1.idx  grasp_mu_bisect.h.CC6EDEAF24DDCB41.idx  hnswalg.h.88FFAAC77F508B74.idx  hnswlib.h.5999FE4FF8F76C13.idx  main.cpp.1027A2458BF3E407.idx  main.cpp.C147FF7DE02033B7.idx  pqueue.cpp.19077CAA58081B10.idx  pqueue.cpp.8D2BDFBE7EC542AD.idx  pqueue.h.B77849F1B7F0C6B1.idx  space_ip.h.C20F0D09F9186443.idx  space_l2.h.2880ACA043E23989.idx  visited_list_pool.h.ACC002585D2121B0.idx
code/include/: BufferManager.h  Hercules.h  Index.h  Node.h  QueryEngine.h  Setting.h  calc_utils.h  file_utils.h  globals.h  grasp_mu_bisect.h  hash_map.h
code/include/hnswlib/: hnswalg.h  hnswlib.h  visited_list_pool.h
code/src/: BufferManager.cpp  Hercules copy.cpp  Hercules.cpp  Index.cpp  Node.cpp  QueryEngine.cpp  Setting.cpp  calc_utils.cpp  file_utils.cpp
paper/: readme.md
